# RobotLearning

./: README.md  errors.npy  final_rewards.npy
ArmRL-master/: .gitignore  CMakeLists.txt  README.md
ArmRL-master/msgs/: CMakeLists.txt  arm_pose_request.proto
ArmRL-master/plugins/: CMakeLists.txt  arm_gz.cc  arm_gz.h  arm_plugin.cc  arm_plugin.h  ball_gz.cc  ball_gz.h  ball_plugin.cc  ball_plugin.h
ArmRL-master/python/: a2c.py  core.py  dqn.py  environment.py  joint2.py  joint3.py  joint5.py  joint7.py  manual.py  memory.py  models.py  physx.py  plot_reward.py  policy.py  power.py  q0.csv  simulation.py  tfmodels.py  trajectory.py  widgets.py
ArmRL-master/scripts/: start_viz.sh
ArmRL-master/worlds/: arm_world.world
Ball Throw/: ball_game.py  ball_throw.py  environment.py  forward_kinemat.py  forward_kinematics.py  main.py  power.py  projectile_throw.py  test.py
Ball Throw/Graph/: events.out.tfevents.1513573450.Poornimas-MacBook-Air.local  events.out.tfevents.1513573453.Poornimas-MacBook-Air.local  events.out.tfevents.1513573456.Poornimas-MacBook-Air.local  events.out.tfevents.1513573458.Poornimas-MacBook-Air.local  events.out.tfevents.1513573461.Poornimas-MacBook-Air.local  events.out.tfevents.1513573464.Poornimas-MacBook-Air.local  events.out.tfevents.1513573467.Poornimas-MacBook-Air.local  events.out.tfevents.1513573470.Poornimas-MacBook-Air.local  events.out.tfevents.1513573472.Poornimas-MacBook-Air.local  events.out.tfevents.1513573475.Poornimas-MacBook-Air.local  events.out.tfevents.1513573477.Poornimas-MacBook-Air.local  events.out.tfevents.1513573480.Poornimas-MacBook-Air.local  events.out.tfevents.1513573483.Poornimas-MacBook-Air.local  events.out.tfevents.1513573485.Poornimas-MacBook-Air.local  events.out.tfevents.1513573488.Poornimas-MacBook-Air.local  events.out.tfevents.1513573491.Poornimas-MacBook-Air.local  events.out.tfevents.1513573494.Poornimas-MacBook-Air.local  events.out.tfevents.1513573497.Poornimas-MacBook-Air.local  events.out.tfevents.1513573500.Poornimas-MacBook-Air.local  (+1 more)
RobotLearningHW1/: RobotLearningHW1.csproj  RobotLearningHW1.sln
RobotLearningHW1/Assets/: RoboticArm.unity
(+11 files in other folders)
